# sqla-2.0-async

./: alembic.ini  config.py  crud.py  db.sqlite3  main.py  pyproject.toml
alembic/versions/: 27_1949_54_d5789fc424ae_create_users.py  27_1952_45_ea4522ff360a_create_posts_table.py  28_1726_27_8e7c8ac48d6c_create_access_permission_table.py
core/models/: __init__.py  db_helper.py  post.py  user.py
models/: __init__.py  post.py  user.py
utils/: email_sender.py
views/calc/: __init__.py  schemas.py  views.py
views/users/: crud.py  dependencies.py  schemas.py  views.py
