[project]
name = "async-sqlalchemy-2-0"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy[asycio] (>=2.0.47,<3.0.0)",
    "aiosqlite (>=0.22.1,<0.23.0)"
]

[tool.poetry]
packages = [{include = "async_sqlalchemy_2"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
