[project]
name = "sqla-2-0"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.133.1,<0.134.0",
  "uvicorn>=0.41.0,<0.42.0",
  "pydantic>=2.12.5,<3.0.0",
  "pydantic-settings>=2.13.1,<3.0.0",
  "sqlalchemy[asyncio]>=2.0.47,<3.0.0",
  "aiosqlite>=0.22.1,<0.23.0",
  "alembic (>=1.18.4,<2.0.0)",
]

[tool.poetry]
packages = [{include = "sqla_2"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
